<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".presentation.CardInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <androidx.cardview.widget.CardView
            style="@style/CardInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                style="@style/CardInfoContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    style="@style/CardInfoTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bank_info_title" />

                <LinearLayout
                    style="@style/CardInfoLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_bank"
                        app:tint="@color/blue_500" />

                    <TextView
                        android:id="@+id/tvBankName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        tools:text="BANK VTB24 (CJSC)" />

                </LinearLayout>

                <LinearLayout
                    style="@style/CardInfoLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_link"
                        app:tint="@color/blue_500" />

                    <TextView
                        android:id="@+id/tvSite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        tools:text="www.vtb24.ru" />

                </LinearLayout>

                <LinearLayout
                    style="@style/CardInfoLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_phone"
                        app:tint="@color/blue_500" />

                    <TextView
                        android:id="@+id/tvPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        tools:text="7 (495) 739-77-99 OR 8 (800) 100-24-24, (495) 777-24-24" />

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/CardInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                style="@style/CardInfoContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    style="@style/CardInfoTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/country_info_title" />

                <LinearLayout
                    style="@style/CardInfoLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_location"
                        app:tint="@color/blue_500" />

                    <TextView
                        android:id="@+id/tvCountryShort"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        tools:text="RU" />

                </LinearLayout>

                <LinearLayout
                    style="@style/CardInfoLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_earth"
                        app:tint="@color/blue_500" />

                    <TextView
                        android:id="@+id/tvCountry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        tools:text="Russian Federation" />

                </LinearLayout>

                <LinearLayout
                    style="@style/CardInfoLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_map"
                        app:tint="@color/blue_500" />

                    <TextView
                        android:id="@+id/tvCoordinates"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        tools:text="(latitude: 60, longitude: 100)" />

                </LinearLayout>

                <LinearLayout
                    style="@style/CardInfoLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_currency"
                        app:tint="@color/blue_500" />

                    <TextView
                        android:id="@+id/tvCurrency"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        tools:text="RUB" />

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/CardInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                style="@style/CardInfoContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    style="@style/CardInfoTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/card_info_title" />

                <LinearLayout
                    style="@style/CardInfoLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="SCHEME / NETWORK:"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvScheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        tools:text="Visa" />
                </LinearLayout>

                <LinearLayout
                    style="@style/CardInfoLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TYPE:"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvCardType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        tools:text="Debit" />

                </LinearLayout>

                <LinearLayout
                    style="@style/CardInfoLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="BRAND:"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvBrand"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        tools:text="Traditional" />

                </LinearLayout>

                <LinearLayout
                    style="@style/CardInfoLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="PREPAID:"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvPrepaid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        tools:text="No" />

                </LinearLayout>

                <LinearLayout
                    style="@style/CardInfoLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="CARD NUMBER LENGTH:"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvCardNumberLength"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        tools:text="16" />

                </LinearLayout>

                <LinearLayout
                    style="@style/CardInfoLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="CARD NUMBER LUHN:"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvCardNumberLuhn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        tools:text="Yes" />

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>